Preparing to migration on java 11